--- a/homework/one/writeup.tex
+++ b/homework/one/writeup.tex
@@ -1,58 +1,15 @@
 %%%%%latex preamble%%%%%
 
-\documentclass[titlepage]{article}\usepackage[]{graphicx}\usepackage[]{color}
+\documentclass{article}
 %% maxwidth is the original width if it is less than linewidth
 %% otherwise use linewidth (to make sure the graphics do not exceed the margin)
-\makeatletter
-\def\maxwidth{ %
-  \ifdim\Gin@nat@width>\linewidth
-  \linewidth
-  \else
-  \Gin@nat@width
-  \fi
-}
-\makeatother
-
-
-\usepackage{listings}
-\lstset{language=Python} 
-\definecolor{mygreen}{rgb}{0,0.6,0}
-\definecolor{mygray}{rgb}{0.5,0.5,0.5}
-\definecolor{mymauve}{rgb}{0.58,0,0.82}
-\lstset{ %
-  backgroundcolor=\color{white},   % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}
-  basicstyle=\footnotesize,        % the size of the fonts that are used for the code
-  breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
-  breaklines=true,                 % sets automatic line breaking
-  captionpos=b,                    % sets the caption-position to bottom
-  commentstyle=\color{mygreen},    % comment style
-  deletekeywords={...},            % if you want to delete keywords from the given language
-  escapeinside={\%*}{*)},          % if you want to add LaTeX within your code
-  extendedchars=true,              % lets you use non-ASCII characters; for 8-bits encodings only, does not work with UTF-8
-  frame=single,                    % adds a frame around the code
-  keepspaces=true,                 % keeps spaces in text, useful for keeping indentation of code (possibly needs columns=flexible)
-  keywordstyle=\color{blue},       % keyword style
-  language=Octave,                 % the language of the code
-  morekeywords={*,...},            % if you want to add more keywords to the set
-  numbers=left,                    % where to put the line-numbers; possible values are (none, left, right)
-  numbersep=5pt,                   % how far the line-numbers are from the code
-  numberstyle=\tiny\color{mygray}, % the style that is used for the line-numbers
-  rulecolor=\color{black},         % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
-  showspaces=false,                % show spaces everywhere adding particular underscores; it overrides 'showstringspaces'
-  showstringspaces=false,          % underline spaces within strings only
-  showtabs=false,                  % show tabs within strings adding particular underscores
-  stepnumber=2,                    % the step between two line-numbers. If it's 1, each line will be numbered
-  stringstyle=\color{mymauve},     % string literal style
-  tabsize=2,                       % sets default tabsize to 2 spaces
-  title=\lstname                   % show the filename of files included with \lstinputlisting; also try caption instead of title
-}
 \usepackage{alltt}
 \usepackage[sc]{mathpazo}
 \usepackage{amsmath, amsthm, amssymb}
 \usepackage{graphicx}
 \usepackage[T1]{fontenc}
 \usepackage{geometry}
-\geometry{verbose,tmargin=2.5cm,bmargin=2.5cm,lmargin=1.5cm,rmargin=1.5cm}
+%\geometry{verbose,tmargin=2.5cm,bmargin=2.5cm,lmargin=1.5cm,rmargin=1.5cm}
 \setcounter{secnumdepth}{2}
 \setcounter{tocdepth}{2}
 \usepackage{url}
@@ -74,7 +31,7 @@ breaklinks=false,pdfborder={0 0 1},backref=false,colorlinks=false]
 \lhead{}
 \chead{\leftmark}
 \rhead{}
-\lfoot{Aaron Gonzales; Data Mining}
+\lfoot{Aaron Gonzales; Algorithms}
 \cfoot{Homework 1}
 \rfoot{Page \thepage\ of \pageref{LastPage}}
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
@@ -88,13 +45,11 @@ breaklinks=false,pdfborder={0 0 1},backref=false,colorlinks=false]
 
 given the following vectors:
 
-\[ 
-
+\begin{equation}
 x = \{1, 3, 5, 7, 6, 8, 5, 2\}, 
 y = \{7, 11, 9, 6, 4, 3, 1, 3\}, 
-z = \{3, 5, 7, 9, 8, 7, 6, 5\}
-
-\]
+z = \{3, 5, 7, 9, 8, 7, 6, 5\} 
+\end{equation}
 
 \section{wavelet}
 
@@ -116,5 +71,5 @@ z = \{3, 5, 7, 9, 8, 7, 6, 5\}
 \subsection{largest three wavelet coefficients of y}
 
 
-\subsection{which one of the above approximations (c.2-c.4) matches the ordering of the distances from 
+\subsection{which one of the above approximations matches the ordering of the distances from 
 the raw vectors?}
