added /end{document} because i'm a fucking idiot

--- a/homework/one/writeup.tex
+++ b/homework/one/writeup.tex
@@ -46,16 +46,16 @@ breaklinks=false,pdfborder={0 0 1},backref=false,colorlinks=false]
 given the following vectors:
 
 \begin{equation}
-x = \{1, 3, 5, 7, 6, 8, 5, 2\}, 
-y = \{7, 11, 9, 6, 4, 3, 1, 3\}, 
-z = \{3, 5, 7, 9, 8, 7, 6, 5\} 
+x = \{1, 3, 5, 7, 6, 8, 5, 2\}  \\
+y = \{7, 11, 9, 6, 4, 3, 1, 3\}  \\
+z = \{3, 5, 7, 9, 8, 7, 6, 5\}  \\
 \end{equation}
 
-\section{wavelet}
+\section{wavelet transform each vector}
 
 
 
-\section{fourier}
+\section{fourier transform each vector}
 
 \section{minkowski distance}
 
@@ -73,3 +73,6 @@ z = \{3, 5, 7, 9, 8, 7, 6, 5\}
 
 \subsection{which one of the above approximations matches the ordering of the distances from 
 the raw vectors?}
+
+
+\end{document}
