--- a/homework/one/writeup.tex
+++ b/homework/one/writeup.tex
@@ -517,10 +517,26 @@ Between x and y:
   \[ = \sqrt{163} \]
   \[ \approx 12.767 \]
 
+  Between x and z:
+
+\[ x = \{1, 3, 5, 7, 6, 8, 5, 2\}  \] \\
+\[ z = \{3, 5, 7, 9, 8, 7, 6, 5 \} \]
+
+\[ \sqrt{ | 1-3 |^2 + |3 -5|^2 + |5-7|^2 + 
+  |7-9|^2 + |6-8|^2 + |8-7|^2 + |5-6|^2 + |2-5|^2} \]
+  \[ = \sqrt{13} \]
+  \[ \approx 5.56776 \]
 
 
+  between y and z:
 
+\[ y = \{7, 11, 9, 6, 4, 3, 1, 3\}  \] \\
+ \[ z = \{3, 5, 7, 9, 8, 7, 6, 5 \} \]
 
+\[ \sqrt{ | 7-3 |^2 + |11 -5|^2 + |9-7|^2 + 
+  |6-9|^2 + |4-8|^2 + |3-7|^2 + |1-6|^2 + |3-5|^2} \]
+  \[ =3 \sqrt{14} \]
+  \[ \approx 11.2249 \]
 
   \[ 
 	\begin{pmatrix}
@@ -532,8 +548,40 @@ Between x and y:
 
 
 \subsection{wavlet coeff.}
+X : $\{104.652, -11.3137, -16., 14., -2.82843, -2.82843, -2.82843, 4.24264 \}$ \\
+Y: $ \{ 124.451, 62.2254, 6., 6., -5.65685, 4.24264, 1.41421, -2.82843 \}$  \\
+Z: $ \{141.421, -5.65685, -16, 8, -2.82843, -2.82843, 1.41421, 1.41421\} $
 
 
+
+Between x and y:
+\[ \sqrt{ | 104.652-124.451 |^2 + |-11.3137 -62.2254|^2 + |-16-6|^2 + |14-6|^2
++ |-2.82843 - -5.65685|^2 + |-2.82843-4.24264 |^2 + |-2.82843 - 1.41421 |^2 +
+|4.24264 - -2.82843 |^2} \]
+  \[ \approx 80.4612 \]
+
+
+  between y and z 
+Y: $ \{ 124.451, 62.2254, 6., 6., -5.65685, 4.24264, 1.41421, -2.82843 \}$  \\
+Z: $ \{141.421, -5.65685, -16, 8, -2.82843, -2.82843, 1.41421, 1.41421\} $ \\
+
+\begin{multline*}
+	\sqrt{ | 124.451 + 141.451|^2 + | 62.2254 - -5.65685 |^2 + | 6 - -16|^2} + \\ 
+	 \overline{| 6 - 8|^2 +  | -5.65685 -2.82843 |^2 + | 4.24264 -2.82843 |^2 + |1.41421 -} \\
+	 \overline{1.41421|^2 +| -2.82843 - 1.41421|^2 }  
+\end{multline*}
+\[ \approx 275.485 \]
+
+
+X : $\{104.652, -11.3137, -16., 14., -2.82843, -2.82843, -2.82843, 4.24264 \}$ \\
+Z: $ \{141.421, -5.65685, -16, 8, -2.82843, -2.82843, 1.41421, 1.41421\} $ \\
+
+\begin{multline*}
+	\sqrt{ | 104.652 - 141.421 |^2 + | -11.3137 - -5.65658|^2 + |-16 -16|^2 +} \\
+	\overline{|14 -8|^2 + | -2.82843 - -2.82843 |^2 + | -2.82843 - -2.82843 |^2 +} \\
+	\overline{ |-2.82843 - 1.41421|^2 + |4.24264 - 1.41421|^2 }
+\end{multline*}
+\[ \approx 49.6987 \]
 \subsection{largest three wavelet coefficients of x}
 
 
