updated last section

--- a/homework/one/writeup.tex
+++ b/homework/one/writeup.tex
@@ -512,6 +512,11 @@ Between x and y:
 \[ x = \{1, 3, 5, 7, 6, 8, 5, 2\}  \] \\
 \[ 	y = \{7, 11, 9, 6, 4, 3, 1, 3\}  \] \\
 
+\[ \sqrt{ | 1-7 | + |3 -11| + |5-9| + 
+  |7-6| + |6-4| + |8-3| + |5-1| + |2-3|} \]
+  \[ =\sqrt{31} \]
+  \[ \approx 5.5677\]
+
 \[ \sqrt{ | 1-7 |^2 + |3 -11|^2 + |5-9|^2 + 
   |7-6|^2 + |6-4|^2 + |8-3|^2 + |5-1|^2 + |2-3|^2} \]
   \[ = \sqrt{163} \]
@@ -521,6 +526,11 @@ Between x and y:
 
 \[ x = \{1, 3, 5, 7, 6, 8, 5, 2\}  \] \\
 \[ z = \{3, 5, 7, 9, 8, 7, 6, 5 \} \]
+
+\[ \sqrt{ | 1-3 | + |3 -5| + |5-7| + 
+  |7-9| + |6-8| + |8-7| + |5-6| + |2-5|} \]
+  \[ = \sqrt{15} \]
+  \[ \approx 3.8729 \]
 
 \[ \sqrt{ | 1-3 |^2 + |3 -5|^2 + |5-7|^2 + 
   |7-9|^2 + |6-8|^2 + |8-7|^2 + |5-6|^2 + |2-5|^2} \]
@@ -533,55 +543,63 @@ Between x and y:
 \[ y = \{7, 11, 9, 6, 4, 3, 1, 3\}  \] \\
  \[ z = \{3, 5, 7, 9, 8, 7, 6, 5 \} \]
 
+\[ \sqrt{ | 7-3 | + |11 -5| + |9-7| + 
+  |6-9| + |4-8| + |3-7| + |1-6| + |3-5|} \]
+  \[ = \sqrt{30} \]
+  \[ \approx 5.477 \]
+
 \[ \sqrt{ | 7-3 |^2 + |11 -5|^2 + |9-7|^2 + 
   |6-9|^2 + |4-8|^2 + |3-7|^2 + |1-6|^2 + |3-5|^2} \]
   \[ =3 \sqrt{14} \]
   \[ \approx 11.2249 \]
 
-  \[ 
-	\begin{pmatrix}
-	  1& 3& 5& 7& 6& 8& 5& 2 \\
-	  7& 11& 9& 6& 4& 3& 1& 3  \\
-	  3& 5& 7& 9& 8& 7& 6& 5 
-	\end{pmatrix}
-  \]
 
-
-\subsection{wavlet coeff.}
-X : $\{104.652, -11.3137, -16., 14., -2.82843, -2.82843, -2.82843, 4.24264 \}$ \\
-Y: $ \{ 124.451, 62.2254, 6., 6., -5.65685, 4.24264, 1.41421, -2.82843 \}$  \\
-Z: $ \{141.421, -5.65685, -16, 8, -2.82843, -2.82843, 1.41421, 1.41421\} $
+\subsection{1st 3 wavlet coeff.}
+X : $\{104.652, -11.3137, -16 \}$ \\
+Y: $ \{ 124.451, 62.2254, 6 \}$  \\
+Z: $ \{141.421, -5.65685, -16 \} $
 
 
 
-Between x and y:
-\[ \sqrt{ | 104.652-124.451 |^2 + |-11.3137 -62.2254|^2 + |-16-6|^2 + |14-6|^2
-+ |-2.82843 - -5.65685|^2 + |-2.82843-4.24264 |^2 + |-2.82843 - 1.41421 |^2 +
-|4.24264 - -2.82843 |^2} \]
-  \[ \approx 80.4612 \]
+Between x and y:\\ 
+\subsubsection{h =1}
+\[ \sqrt{ | 104.652-124.451 | + |-11.3137 -62.2254| + |-16-6| } \]
+  \[ \approx 10.7396 \]
+\subsubsection{h =2}
+\[ \sqrt{ | 104.652-124.451 |^2 + |-11.3137 -62.2254|^2 + |-16-6|^2 } \]
+  \[ \approx 79.27 \]
 
 
-  between y and z 
-Y: $ \{ 124.451, 62.2254, 6., 6., -5.65685, 4.24264, 1.41421, -2.82843 \}$  \\
-Z: $ \{141.421, -5.65685, -16, 8, -2.82843, -2.82843, 1.41421, 1.41421\} $ \\
+  between y and z:\\ 
+Y: $ \{ 124.451, 62.2254, 6\}$  \\
+Z: $ \{141.421, -5.65685, -16\} $ \\
 
+\subsubsection{h=1}
 \begin{multline*}
-	\sqrt{ | 124.451 + 141.451|^2 + | 62.2254 - -5.65685 |^2 + | 6 - -16|^2} + \\ 
-	 \overline{| 6 - 8|^2 +  | -5.65685 -2.82843 |^2 + | 4.24264 -2.82843 |^2 + |1.41421 -} \\
-	 \overline{1.41421|^2 +| -2.82843 - 1.41421|^2 }  
+	\sqrt{ | 124.451 + 141.451| + | 62.2254 - -5.65685 | + | 6 - -16|}  \\ 
 \end{multline*}
-\[ \approx 275.485 \]
+\[ \approx 18.8622 \]
 
-
-X : $\{104.652, -11.3137, -16., 14., -2.82843, -2.82843, -2.82843, 4.24264 \}$ \\
-Z: $ \{141.421, -5.65685, -16, 8, -2.82843, -2.82843, 1.41421, 1.41421\} $ \\
-
+\subsubsection{h=2}
 \begin{multline*}
-	\sqrt{ | 104.652 - 141.421 |^2 + | -11.3137 - -5.65658|^2 + |-16 -16|^2 +} \\
-	\overline{|14 -8|^2 + | -2.82843 - -2.82843 |^2 + | -2.82843 - -2.82843 |^2 +} \\
-	\overline{ |-2.82843 - 1.41421|^2 + |4.24264 - 1.41421|^2 }
+	\sqrt{ | 124.451 + 141.451|^2 + | 62.2254 - -5.65685 |^2 + | 6 - -16|^2}  \\ 
 \end{multline*}
-\[ \approx 49.6987 \]
+\[ \approx 275.311 \]
+
+
+X : $\{104.652, -11.3137, -16\}$ \\
+Z: $ \{141.421, -5.65685, -16\} $ \\
+\subsubsection{h=1}
+\begin{multline*}
+	\sqrt{ | 104.652 - 141.421 | + | -11.3137 - -5.65658| + |-16 -16|} \\
+\end{multline*}
+\[ \approx 8.627 \]
+
+\subsubsection{h=2}
+\begin{multline*}
+	\sqrt{ | 104.652 - 141.421 |^2 + | -11.3137 - -5.65658|^2 + |-16 -16|^2 } \\
+\end{multline*}
+\[ \approx 49.0710 \]
 \subsection{largest three wavelet coefficients of x}
 
 
